@@ -254,6 +254,7 @@ struct machine
 
   SDL_bool printenable;
   SDL_bool printfilter;
+  SDL_bool dcadjust;
 
   SDL_bool lightpen;
   Uint8  lightpenx, lightpeny;
