@@ -138,6 +138,10 @@ lightpen = no
 ; select 'no' for raw binay mode
 ;printfilter = yes
 
+; Enable audio DC adjustment
+; default enabled
+;dcadjust = yes
+
 ; ACIA emulation back-end name:
 ;   'none' - no serial present
 ;   'loopback' - for testing - all TX data is returned to RX
